# nbody_viewer

./: .clangd  .gitignore  CMakeLists.txt  Readme.md  index.html  main.cpp  main.data  main.js  main.wasm
.github/workflows/: main.yml
Viewer/: Game.cpp  Game.hpp  Light.cpp  Light.hpp  OrbitalCamera.hpp  Sphere.cpp  Sphere.hpp  Utility.hpp  Viewer.cpp  Viewer.hpp
Viewer/shader/gl/: lighting.fs
resources/: lighting.fs  output.txt
